fix alignment

--- a/src/vs/platform/actionWidget/browser/actionWidget.css
+++ b/src/vs/platform/actionWidget/browser/actionWidget.css
@@ -55,7 +55,7 @@
 
 /** Styles for each row in the list element **/
 .action-widget .monaco-list .monaco-list-row {
-	padding: 0 4px 0 8px;
+	padding: 0 12px 0 8px;
 	white-space: nowrap;
 	cursor: pointer;
 	touch-action: none;
@@ -119,7 +119,7 @@
 
 .action-widget .monaco-list-row.action {
 	display: flex;
-	gap: 8px;
+	gap: 6px;
 	align-items: center;
 }
 
@@ -272,6 +272,7 @@
 	display: flex;
 	align-items: center;
 	gap: 4px;
+	padding-right: 10px;
 }
 
 .action-widget .action-list-filter:first-child {
@@ -324,7 +325,6 @@
 	height: 20px;
 	flex-shrink: 0;
 	border-radius: 4px;
-	margin-right: 2px;
 }
 
 .action-widget .action-list-submenu-indicator.has-submenu {
